index.html markup second version

--- a/source/index.html
+++ b/source/index.html
@@ -7,10 +7,36 @@
   <body>
 
     <header class="page-header">
-      <a class="page-header__logo">
-        <img src="http://placehold.it/150x100" alt="Мишка">
-      </a>
-      <button type="button" class="nav__menu"></button>
+      <div class="logo">
+        <a href="#">
+          <img src="http://placehold.it/150x100" alt="Mishka">
+        </a>
+      </div>
+      <nav class="main-menu">
+        <div class="main-menu__button">
+          <button class="main-menu__button--icon" type="button"></button>
+        </div>
+        <ul class="main-menu__list">
+          <li>
+            <a class="main-menu__list--item" href="#">Каталог товаров</a>
+          </li>
+          <li>
+            <a class="main-menu__list--item" href="#">Вязание на заказ</a>
+          </li>
+          <li>
+            <a class="main-menu__list--item" href="#">Поиск</a>
+          </li>
+          <li>
+            <a class="main-menu__list--item" href="#">Корзина</a>
+          </li>
+          <li>
+            <a class="main-menu__list--item" href="#">Новые поступления</a>
+          </li>
+          <li>
+            <a class="main-menu__list--item" href="#">Распродажа</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <main class="page-main">
