--- a/source/index.html
+++ b/source/index.html
@@ -1,171 +1,177 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>HTML Academy: Мишка</title>
-  </head>
-  <body>
+</head>
+
+<body>
 
     <header class="page-header">
-      <div class="logo">
-        <a href="#">
-          <img src="http://placehold.it/150x100" alt="Mishka">
-        </a>
-      </div>
-      <nav class="main-menu">
-        <div class="main-menu__button">
-          <button class="main-menu__button--icon" type="button"></button>
+
+        <div class="logo">
+            <a class="logo__image">
+                <img src="http://placehold.it/150x100" alt="Mishka">
+            </a>
         </div>
-        <ul class="main-menu__list">
-          <li>
-            <a class="main-menu__list--item" href="#">Каталог товаров</a>
-          </li>
-          <li>
-            <a class="main-menu__list--item" href="#">Вязание на заказ</a>
-          </li>
-          <li>
-            <a class="main-menu__list--item" href="#">Поиск</a>
-          </li>
-          <li>
-            <a class="main-menu__list--item" href="#">Корзина</a>
-          </li>
-          <li>
-            <a class="main-menu__list--item" href="#">Новые поступления</a>
-          </li>
-          <li>
-            <a class="main-menu__list--item" href="#">Распродажа</a>
-          </li>
-        </ul>
-      </nav>
+        
+        <nav class="main-menu">
+
+            <button class="main-menu__button-icon" type="button"></button>
+
+            <ul class="main-menu__list">
+                <li>
+                    <a class="main-menu__list-item" href="#">Каталог товаров</a>
+                </li>
+                <li>
+                    <a class="main-menu__list-item" href="#">Вязание на&nbsp;заказ</a>
+                </li>
+                <li>
+                    <a class="main-menu__list-item" href="#">Поиск</a>
+                </li>
+                <li>
+                    <a class="main-menu__list-item" href="#">Корзина</a>
+                </li>
+                <li>
+                    <a class="main-menu__list-item" href="#">Новые поступления</a>
+                </li>
+                <li>
+                    <a class="main-menu__list-item" href="#">Распродажа</a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <main class="page-main">
-      <h1>Милые штуки ручной работы для дома</h1>
-      <div class="category">
-        <a class="category__item category__item--interior" href="#">Предметы<br> интерьера<img src="http://placehold.it/150x100" alt="Лампа" class="category__img"></a>
-        <a class="category__item category__item--toys" href="#">Детские<br> игрушки<img src="http://placehold.it/150x100" alt="Конструктор" class="category__img"></a>
-      </div> 
-
-      <div class="popular-item">
-        <div class="popular-item__header">
-          <h1>Вязаные корзинки</h1>
-          <p>Товар недели</p>
+        <div class="page-main__header">
+            <h1 class="page-main__header--main-title">Милые штуки ручной работы для дома</h1>
         </div>
-        <div class="popular-item__description">
-          <p>Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах</p>
-          <table class="popular-item__table">
-            <tr>
-              <td>Цвет:</td>
-              <td>"Тиффани"/серый</td>
-            </tr>
-            <tr>
-                <td>Диаметр:</td>
-                <td>25см</td>
-              </tr>
-              <tr>
-                  <td>Высота:</td>
-                  <td>15см</td>
+
+        <div class="category">
+            <a class="category__item category__item--interior" href="#">Предметы интерьера</a>
+            <a class="category__item category__item--toys" href="#">Детские игрушки</a>
+        </div>
+
+        <section class="popular-item">
+            <header class="popular-item__header">
+                <h2 class="popular-item__type">Вязаные корзинки</h2>
+                <span class="popular-item__title">Товар недели</span>
+            </header>>
+            <article class="popular-item__description">
+                <p class="popular-item__text">
+                    Экологически чистая пряжа, ручная работа. Доступны в&nbsp;шести расцветках, и&nbsp;трех размерах
+                </p>
+                <table class="popular-item__table">
+                    <tr>
+                        <td>Цвет:</td>
+                        <td>&laquo;Тиффани&raquo;/серый</td>
+                    </tr>
+                    <tr>
+                        <td>Диаметр:</td>
+                        <td>25&nbsp;см</td>
+                    </tr>
+                    <tr>
+                        <td>Высота:</td>
+                        <td>15&nbsp;см</td>
+                    </tr>
+                </table>
+
+                <img class="popular-item__image" src="http://placehold.it/150x100" alt="Вязаная корзинка">
+            </article>>
+            <footer class="popular-item__footer">
+                <span class="popular-item__price">Цена: 990&nbsp;руб.</span>
+                <a href="#" class="popular-item__button">Заказать</a>
+            </footer>
+
+        </section>
+
+        <section class="features">
+            <legend class="features-list__title">Коротко о&nbsp;нас:</legend>
+            <article class="features-list">
+
+                <ul class="features-list__advantages">
+                    <li class="features-list__advantages--eco">Экологически чистые материалы</li>
+                    <li class="features-list__advantages--style">Скандинавский стиль по&nbsp;российской цене</li>
+                    <li class="features-list__advantages--like">Увеличивает лайки на&nbsp;фотографиях</li>
+                    <li class="features-list__advantages--love">Связано вручную с&nbsp;любовью и&nbsp;умилением</li>
+                    <li class="features-list__advantages--native">Поддержка отечественного производителя</li>
+                    <li class="features-list__advantages--gift">Поставляется в&nbsp;подарочной упаковке</li>
+                </ul>
+            </article>
+
+        </section>
+
+        <section class="reviews">
+            <h2 class="reviews__title">Отзывы</h2>
+            <article class="reviews reviews__slider">
+                <blockquote class="reviews reviews-block1">
+                    <p class="reviews-block1__text"></p>
+                    <cite class="reviews-block1__author">
+                  <b class="reviews-block1__author-name"></b>
+                  <span class="reviews-block1__author-nickname"></span>
+                </cite>
+                </blockquote>
+                <blockquote class="reviews reviews-block2">
+                    <p class="reviews-block2__text">
+                        Я&nbsp;молодая мама, но&nbsp;все равно фотографии не&nbsp;набирали и&nbsp;близко такого количества лайков, как у&nbsp;популярных инстамамочек. В&nbsp;отчаянии, я&nbsp;накупила аксессуаров и&nbsp;игрушек в&nbsp;Мишке, и&nbsp;мои фотографии сразу стали более стильными, а&nbsp;также набирают больше лайков!
+                    </p>
+                    <cite class="reviews-block2__author">
+                      <b class="reviews-block2__author-name">Анастасия Красильникова</b> 
+                      <span class="reviews-block2__author-nickname">@misssssiskras</span>
+                    </cite>
+                </blockquote>
+            </article>
+            <div class="reviews__navigation">
+                <button type="button" class="reviews__arrow reviews__arrow--previous" title="Prev review">Предыдущий отзыв</button>
+                <button type="button" class="reviews__arrow reviews__arrow--next" title="Next review">Следующий отзыв</button>
+            </div>
+
+            <a class="reviews__create">Написать</a>
+
+        </section>
+
+        <section class="contacts">
+            <h2 class="contacts-title">Контакты</h2>
+            <table class="contacts__details">
+                <tr>
+                    <td>e-mail:</td>
+                    <td><a href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a></td>
                 </tr>
-          </table>
-          <div class="popular-item__image">
-              <img src="http://placehold.it/150x100" alt="Вязаная корзинка">
-          </div>
-          <div class="popular-item__footer">
-              <p>Цена: 990 руб.</p>
-              <button type="button" class="popular-item__button">Заказать</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="features">
-        <h1>Коротко о нас:</h1>
-        <div class="features__item">
-          <img src="http://placehold.it/150x100" class="features__img" alt="Цветок">
-          <h3>Экологически чистые материалы</h3>
-        </div>
-        <div class="features__item">
-            <img src="http://placehold.it/150x100" class="features__img" alt="Деньги">
-            <h3>Скандинавский стиль по российской цене</h3>
-        </div>
-        <div class="features__item">
-            <img src="http://placehold.it/150x100" class="features__img" alt="Сердце">
-            <h3>Увеличивает лайки на фотографиях</h3>
-        </div>
-        <div class="features__item">
-            <img src="http://placehold.it/150x100" class="features__img" alt="Клубок">
-            <h3>Связано вручную с любовью и умилением</h3>
-        </div>
-        <div class="features__item">
-            <img src="http://placehold.it/150x100" class="features__img" alt="Ракета">
-            <h3>Поддержка отечественного производителя</h3>
-        </div>
-        <div class="features__item">
-            <img src="http://placehold.it/150x100" class="features__img" alt="Подарок">
-            <h3>Поставляется в подарочной упаковке</h3>
-        </div>
-      </div>
-
-      <div class="reviews">
-        <h1>Отзывы</h1>
-        <blockquote class="reviews__text">
-          <p>
-              Я молодая мама, но все равно фотографии не набирали и близко такого количества лайков,
-              как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке,
-              и мои фотографии сразу стали более стильными, а также набирают больше лайков!
-          </p>
-          <cite class="reviews__author">Анастасия Красильникова<br> @misssssiskras</cite>
-        </blockquote>
-        <div class="reviews__navigation">
-          <button type="button" class="reviews__arrow reviews__arrow--left"></button>
-          <button type="button" class="reviews__arrow reviews__arrow--right"></button>
-        </div>
-        <div class="reviews__create">
-            <button type="button" class="reviews__create--btn">Написать</button>
-        </div>
-      </div>
-
-      <div class="contacts">
-        <h1>Контакты</h1>
-        <table class="contacts__details">
-          <tr>
-            <td>e-mail:</td>
-            <td>info@mimimishkashop.ru</td>
-          </tr>
-          <tr>
-            <td>адрес:</td>
-            <td>г. Санкт-Петербург,<br> ул. Большая<br> Конюшенная,<br> д.19/8, офис 101</td>
-          </tr>
-        </table>
-        <div class="contacts__map">
-          <img src="http://placehold.it/150x100" alt="Карта">
-        </div>
-        <div type="button" class="contacts__button">Напишите нам</div>
-      </div>
+                <tr>
+                    <td>адрес:</td>
+                    <td>г. Санкт-Петербург, ул. Большая Конюшенная, д.19/8, офис 101</td>
+                </tr>
+            </table>
+            <article class="contacts__map">
+                <img src="http://placehold.it/150x100" alt="Карта">
+            </article>
+            <button type="button" class="contacts__button">Напишите нам</button>
+        </section>
     </main>
 
     <footer class="page-footer">
-      <div class="page-footer__wrapper">
+        <div class="page-footer__wrapper">
 
-        <div class="page-footer__social social">
-          <ul class="social__list">
-            <li>
-              <a class="social__link" href="#"><img src="http://placehold.it/150x100" class="social__link social__img--instagram"></a>
-            </li>
-            <li>
-                <a class="social__link" href="#"><img src="http://placehold.it/150x100" class="social__link social__img--facebook"></a>
-            </li>
-            <li>
-                <a class="social__link" href="#"><img src="http://placehold.it/150x100" class="social__link social__img--twitter"></a>
-            </li>
-          </ul>
-        </div>
+            <ul class="social">
+                <li>
+                    <a class="social__instagram" href="#"></a>
+                </li>
+                <li>
+                    <a class="social__fb" href="#"></a>
+                </li>
+                <li>
+                    <a class="social__twitter" href="#"></a>
+                </li>
+            </ul>
 
-        <div class="page-footer__copyright copyright">
-            <b class="copyright__text">Разработано:</b>
-            <a class="button copyright__link" href="#"><img src="http://placehold.it/150x100" class="copyright__logo"></a>
+            <div class="page-footer__copyright copyright">
+                <b class="copyright__text">Разработано:</b>
+                <a class="button copyright__link" href="#"><img src="http://placehold.it/150x100" class="copyright__logo" alt="logo"></a>
+            </div>
         </div>
-      </div>
     </footer>
 
-  </body>
+</body>
+
 </html>
