--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,41 +1,43 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>HTML Academy: Мишка. Форма заказа</title>
-  </head>
-  <body>
+</head>
+
+<body>
 
     <header class="page-header">
 
         <div class="logo">
-            <a href="#">
+            <a href="#" class="logo_image">
                 <img src="http://placehold.it/150x100" alt="Mishka">
             </a>
         </div>
 
         <nav class="main-menu">
-            <div class="main-menu__button">
-                <button class="main-menu__button--icon" type="button"></button>
-            </div>
+
+            <button class="main-menu__button-icon" type="button"></button>
+
             <ul class="main-menu__list">
                 <li>
-                    <a class="main-menu__list--item" href="#">Каталог товаров</a>
+                    <a class="main-menu__list-item" href="#">Каталог товаров</a>
                 </li>
                 <li>
-                    <a class="main-menu__list--item" href="#">Вязание на заказ</a>
+                    <a class="main-menu__list-item" href="#">Вязание на&nbsp;заказ</a>
                 </li>
                 <li>
-                    <a class="main-menu__list--item" href="#">Поиск</a>
+                    <a class="main-menu__list-item" href="#">Поиск</a>
                 </li>
                 <li>
-                    <a class="main-menu__list--item" href="#">Корзина</a>
+                    <a class="main-menu__list-item" href="#">Корзина</a>
                 </li>
                 <li>
-                    <a class="main-menu__list--item" href="#">Новые поступления</a>
+                    <a class="main-menu__list-item" href="#">Новые поступления</a>
                 </li>
                 <li>
-                    <a class="main-menu__list--item" href="#">Распродажа</a>
+                    <a class="main-menu__list-item" href="#">Распродажа</a>
                 </li>
             </ul>
         </nav>
@@ -43,113 +45,98 @@
     </header>
 
     <main class="page-main">
-
-        <div class="page-main--header">
-            <h1>Каталог товаров</h1>
+        <div class="page-main__header">
+            <h1 class="page-main__header--title">Каталог товаров</h1>
         </div>
 
-        <div class="catalog">
-            <div class="catalog-item">
+        <section class="catalog">
+            <article class="catalog-item catalog__item">
                 <a class="catalog-item__img" href="#">
                     <img src="http://placehold.it/150x100" alt="Заяц">
                 </a>
-            </div>
-            <div class="catalog-item__features">
-                <div class="catalog-item__features catalog-item__features--title">
-                    <a href="#" class="catalog-item__features--title">Зайчик-попрыгайчик</a>
-                    <p>Рост 30см., вес 200г.</p>
+                <div class="catalog-item__features">
+                    <div class="catalog-item__title">
+                        <a href="#" class="catalog-item__title--name">Зайчик-попрыгайчик</a>
+                        <span class="catalog-item__title--description">Рост 30см., вес 200г.</span>
+                    </div>
+                    <div class="catalog-item__price">
+                        <span class="catalog-item__price--rub">1200&nbsp;руб.</span>
+                        <a class="catalog-item__price--icon"></a>
+                    </div>
                 </div>
-                <div class="catalog-item__features catalog-item__features--price">
-                    <p>1200 руб.</p>
-                    <a class="catalog-item__features--icon">
-                        <img src="http://placehold.it/150x100" alt="Иконка корзины">
-                    </a> 
-                </div>
-            </div>
-            <div class="catalog-item">
+                <div class="catalog-item">
                     <a class="catalog-item__img" href="#">
                         <img src="http://placehold.it/150x100" alt="Корзинка">
                     </a>
                 </div>
-            <div class="catalog-item__features">
-                <div class="catalog-item__features catalog-item__features--title">
-                    <a href="#" class="catalog-item__features--title">Корзинка для белья</a>
-                    <p>Диаметр 15см., высота 10см.</p>
+                <div class="catalog-item__features">
+                    <div class="catalog-item__title">
+                        <a href="#" class="catalog-item__title--name">Корзинка для белья</a>
+                        <span class="catalog-item__title--description">Диаметр 15&nbsp;см., высота 10&nbsp;см.</span>
+                    </div>
+                    <div class="catalog-item__price">
+                        <span class="catalog-item__price--rub">690&nbsp;руб.</span>
+                        <a class="catalog-item__price--icon"></a>
+                    </div>
                 </div>
-                <div class="catalog-item__features catalog-item__features--price">
-                    <p>690 руб.</p>
-                    <a class="catalog-item__features--icon">
-                        <img src="http://placehold.it/150x100" alt="Иконка корзины">
-                    </a>
-                </div>
-            </div>
-            <div class="catalog-item">
+                <div class="catalog-item">
                     <a class="catalog-item__img" href="#">
                         <img src="http://placehold.it/150x100" alt="Корзина для игрушек">
                     </a>
                 </div>
                 <div class="catalog-item__features">
-                    <div class="catalog-item__features catalog-item__features--title">
-                        <a href="#" class="catalog-item__features--title">Большая корзинка для игрушек</a>
-                        <p>Диаметр 30см., высота 30см.</p>
+                    <div class="catalog-item__title">
+                        <a href="#" class="catalog-item__title--name">Большая корзинка для игрушек</a>
+                        <span class="catalog-item__title--description">Диаметр 30&nbsp;см., высота 30&nbsp;см.</span>
                     </div>
-                    <div class="catalog-item__features catalog-item__features--price">
-                        <p>1500 руб.</p>
-                        <a class="catalog-item__features--icon">
-                            <img src="http://placehold.it/150x100" alt="Иконка корзины">
-                        </a>
+                    <div class="catalog-item__price">
+                        <span class="catalog-item__price--rub">1500&nbsp;руб.</span>
+                        <a class="catalog-item__price--icon"></a>
                     </div>
                 </div>
-        </div>
+            </article>
+        </section>
 
-        <div class="promo">
-            <div class="promo__header">
-                    <img class="promo__icon" src="http://placehold.it/150x100" alt="Иконка видео">
-                    <h2>Процесс производства</h2>
-            </div>
-            <div class="promo__video">
+        <section class="promo">
+
+            <h2 class="promo__title">Процесс производства</h2>
+
+            <article class="promo__video">
                 <video controls preload="metadata" width="100" height="150"></video>
-            </div>
-            <div class="promo__description">
-                <p>
-                    По просьбам наших<br>
-                    любимых фолловеров мы<br> 
-                    сняли для Вас подробное<br>
-                    видео о том, как появляются<br>
-                    наши товары.
+            </article>
+            <article class="promo__description">
+                <p class="promo__text">
+                    По&nbsp;просьбам наших любимых фолловеров мы сняли для Вас подробное видео о&nbsp;том, как появляются наши товары.
                 </p>
-            </div>
-        </div>
+            </article>
+        </section>>
 
-        <div class="order">
-            <button class="order__button" type="button">Сделать заказ</button>
-        </div>
-        
+        <button class="order__button" type="button">Сделать заказ</button>
+
     </main>
 
     <footer class="page-footer">
         <div class="page-footer__wrapper">
 
-            <div class="page-footer__social social">
-                <ul class="social__list">
-                    <li>
-                        <a class="social__link" href="#"><img src="http://placehold.it/150x100" class="social__link social__img--instagram"></a>
-                    </li>
-                    <li>
-                        <a class="social__link" href="#"><img src="http://placehold.it/150x100" class="social__link social__img--facebook"></a>
-                    </li>
-                    <li>
-                        <a class="social__link" href="#"><img src="http://placehold.it/150x100" class="social__link social__img--twitter"></a>
-                    </li>
-                </ul>
-            </div>
-            
+            <ul class="social">
+                <li>
+                    <a class="social__instagram" href="#"></a>
+                </li>
+                <li>
+                    <a class="social__fb" href="#"></a>
+                </li>
+                <li>
+                    <a class="social__twitter" href="#"></a>
+                </li>
+            </ul>
+
             <div class="page-footer__copyright copyright">
                 <b class="copyright__text">Разработано:</b>
-                <a class="button copyright__link" href="#"><img src="http://placehold.it/150x100" class="copyright__logo"></a>
+                <a class="button copyright__link" href="#"><img src="http://placehold.it/150x100" class="copyright__logo" alt="logo"></a>
             </div>
         </div>
     </footer>
 
-  </body>
+</body>
+
 </html>
