--- a/source/index.html
+++ b/source/index.html
@@ -2,175 +2,184 @@
 <html lang="ru">
 
 <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Мишка</title>
+  <meta charset="utf-8">
+  <title>HTML Academy: Мишка</title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
 
-    <header class="page-header">
+  <header class="page-header">
 
-        <div class="logo">
-            <a class="logo__image">
-                <img src="http://placehold.it/150x100" alt="Mishka">
-            </a>
-        </div>
-        
-        <nav class="main-menu">
+    <div class="logo">
+      <a class="logo__image">
+        <img src="http://placehold.it/150x100" alt="Mishka">
+      </a>
+    </div>
 
-            <button class="main-menu__button-icon" type="button"></button>
+    <nav class="main-menu">
 
-            <ul class="main-menu__list">
-                <li>
-                    <a class="main-menu__list-item" href="#">Каталог товаров</a>
-                </li>
-                <li>
-                    <a class="main-menu__list-item" href="#">Вязание на&nbsp;заказ</a>
-                </li>
-                <li>
-                    <a class="main-menu__list-item" href="#">Поиск</a>
-                </li>
-                <li>
-                    <a class="main-menu__list-item" href="#">Корзина</a>
-                </li>
-                <li>
-                    <a class="main-menu__list-item" href="#">Новые поступления</a>
-                </li>
-                <li>
-                    <a class="main-menu__list-item" href="#">Распродажа</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+      <button class="main-menu__button-icon" type="button"></button>
 
-    <main class="page-main">
-        <div class="page-main__header">
-            <h1 class="page-main__header--main-title">Милые штуки ручной работы для дома</h1>
-        </div>
+      <ul class="main-menu__list">
+        <li>
+          <a class="main-menu__list-item" href="#">Каталог товаров</a>
+        </li>
+        <li>
+          <a class="main-menu__list-item" href="#">Вязание на&nbsp;заказ</a>
+        </li>
+        <li>
+          <a class="main-menu__list-item" href="#">Поиск</a>
+        </li>
+        <li>
+          <a class="main-menu__list-item" href="#">Корзина</a>
+        </li>
+        <li>
+          <a class="main-menu__list-item" href="#">Новые поступления</a>
+        </li>
+        <li>
+          <a class="main-menu__list-item" href="#">Распродажа</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-        <div class="category">
-            <a class="category__item category__item--interior" href="#">Предметы интерьера</a>
-            <a class="category__item category__item--toys" href="#">Детские игрушки</a>
-        </div>
+  <main class="page-main">
+    <div class="page-main__header">
+      <h1 class="page-main__header-title page-main__header-title--main">Милые штуки ручной работы для дома</h1>
+    </div>
 
-        <section class="popular-item">
-            <header class="popular-item__header">
-                <h2 class="popular-item__type">Вязаные корзинки</h2>
-                <span class="popular-item__title">Товар недели</span>
-            </header>>
-            <article class="popular-item__description">
-                <p class="popular-item__text">
-                    Экологически чистая пряжа, ручная работа. Доступны в&nbsp;шести расцветках, и&nbsp;трех размерах
-                </p>
-                <table class="popular-item__table">
-                    <tr>
-                        <td>Цвет:</td>
-                        <td>&laquo;Тиффани&raquo;/серый</td>
-                    </tr>
-                    <tr>
-                        <td>Диаметр:</td>
-                        <td>25&nbsp;см</td>
-                    </tr>
-                    <tr>
-                        <td>Высота:</td>
-                        <td>15&nbsp;см</td>
-                    </tr>
-                </table>
+    <div class="category">
+      <a class="category__item category__item--interior" href="#">Предметы интерьера</a>
+      <a class="category__item category__item--toys" href="#">Детские игрушки</a>
+    </div>
 
-                <img class="popular-item__image" src="http://placehold.it/150x100" alt="Вязаная корзинка">
-            </article>>
-            <footer class="popular-item__footer">
-                <span class="popular-item__price">Цена: 990&nbsp;руб.</span>
-                <a href="#" class="popular-item__button">Заказать</a>
-            </footer>
+    <section class="popular-item">
+      <header class="popular-item__header">
+        <h2 class="popular-item__type">Вязаные корзинки</h2>
+        <span class="popular-item__title">Товар недели</span>
+      </header>>
+      <article class="popular-item__description">
+        <p class="popular-item__text">
+          Экологически чистая пряжа, ручная работа. Доступны в&nbsp;шести расцветках, и&nbsp;трех размерах
+        </p>
+        <table class="popular-item__table">
+          <tr>
+            <td>Цвет:</td>
+            <td>&laquo;Тиффани&raquo;/серый</td>
+          </tr>
+          <tr>
+            <td>Диаметр:</td>
+            <td>25&nbsp;см</td>
+          </tr>
+          <tr>
+            <td>Высота:</td>
+            <td>15&nbsp;см</td>
+          </tr>
+        </table>
 
-        </section>
+        <img class="popular-item__image" src="http://placehold.it/150x100" alt="Вязаная корзинка">
+      </article>>
+      <footer class="popular-item__footer">
+        <span class="popular-item__price">Цена: 990&nbsp;руб.</span>
+        <a href="#" class="popular-item__button">Заказать</a>
+      </footer>
 
-        <section class="features">
-            <legend class="features-list__title">Коротко о&nbsp;нас:</legend>
-            <article class="features-list">
+    </section>
 
-                <ul class="features-list__advantages">
-                    <li class="features-list__advantages--eco">Экологически чистые материалы</li>
-                    <li class="features-list__advantages--style">Скандинавский стиль по&nbsp;российской цене</li>
-                    <li class="features-list__advantages--like">Увеличивает лайки на&nbsp;фотографиях</li>
-                    <li class="features-list__advantages--love">Связано вручную с&nbsp;любовью и&nbsp;умилением</li>
-                    <li class="features-list__advantages--native">Поддержка отечественного производителя</li>
-                    <li class="features-list__advantages--gift">Поставляется в&nbsp;подарочной упаковке</li>
-                </ul>
-            </article>
+    <section class="features">
+      <h2 class="features__title">Коротко о&nbsp;нас:</h2>
+      <div class="features-list">
 
-        </section>
+        <ul class="features-list__advantages">
+          <li class="features-list__advantages features-list__advantages--eco">Экологически чистые материалы</li>
+          <li class="features-list__advantages features-list__advantages--style">Скандинавский стиль по&nbsp;российской цене</li>
+          <li class="features-list__advantages features-list__advantages--like">Увеличивает лайки на&nbsp;фотографиях</li>
+          <li class="features-list__advantages features-list__advantages--love">Связано вручную с&nbsp;любовью и&nbsp;умилением</li>
+          <li class="features-list__advantages features-list__advantages--native">Поддержка отечественного производителя</li>
+          <li class="features-list__advantages features-list__advantages--gift">Поставляется в&nbsp;подарочной упаковке</li>
+        </ul>
+      </div>
 
-        <section class="reviews">
-            <h2 class="reviews__title">Отзывы</h2>
-            <article class="reviews reviews__slider">
-                <blockquote class="reviews reviews-block1">
-                    <p class="reviews-block1__text"></p>
-                    <cite class="reviews-block1__author">
-                  <b class="reviews-block1__author-name"></b>
-                  <span class="reviews-block1__author-nickname"></span>
-                </cite>
-                </blockquote>
-                <blockquote class="reviews reviews-block2">
-                    <p class="reviews-block2__text">
-                        Я&nbsp;молодая мама, но&nbsp;все равно фотографии не&nbsp;набирали и&nbsp;близко такого количества лайков, как у&nbsp;популярных инстамамочек. В&nbsp;отчаянии, я&nbsp;накупила аксессуаров и&nbsp;игрушек в&nbsp;Мишке, и&nbsp;мои фотографии сразу стали более стильными, а&nbsp;также набирают больше лайков!
-                    </p>
-                    <cite class="reviews-block2__author">
-                      <b class="reviews-block2__author-name">Анастасия Красильникова</b> 
-                      <span class="reviews-block2__author-nickname">@misssssiskras</span>
-                    </cite>
-                </blockquote>
-            </article>
-            <div class="reviews__navigation">
-                <button type="button" class="reviews__arrow reviews__arrow--previous" title="Prev review">Предыдущий отзыв</button>
-                <button type="button" class="reviews__arrow reviews__arrow--next" title="Next review">Следующий отзыв</button>
-            </div>
+    </section>
 
-            <a class="reviews__create">Написать</a>
+    <section class="reviews  slider">
+      <h2 class="reviews__title">Отзывы</h2>
+      <article class="reviews__items-wrapper  slider__items-wrapper">
+        <blockquote class="reviews__item  slider__item  review">
+          <p class="review__text">
+            Я&nbsp;молодая мама, но&nbsp;все равно фотографии не&nbsp;набирали и&nbsp;близко такого количества лайков, как у&nbsp;популярных
+            инстамамочек. В&nbsp;отчаянии, я&nbsp;накупила аксессуаров и&nbsp;игрушек в&nbsp;Мишке, и&nbsp;мои фотографии
+            сразу стали более стильными, а&nbsp;также набирают больше лайков!
+          </p>
+          <cite class="review__author">
+            <b class="review__author-name">Анастасия Красильникова</b>
+            <span class="review__author-nickname">@misssssiskras</span>
+          </cite>
+        </blockquote>
+        <blockquote class="reviews__item  slider__item  review">
+          <p class="review__text">
+            Я&nbsp;молодая мама, но&nbsp;все равно фотографии не&nbsp;набирали и&nbsp;близко такого количества лайков, как у&nbsp;популярных
+            инстамамочек. В&nbsp;отчаянии, я&nbsp;накупила аксессуаров и&nbsp;игрушек в&nbsp;Мишке, и&nbsp;мои фотографии
+            сразу стали более стильными, а&nbsp;также набирают больше лайков!
+          </p>
+          <cite class="review__author">
+            <b class="review__author-name">Анастасия Красильникова</b>
+            <span class="review__author-nickname">@misssssiskras</span>
+          </cite>
+        </blockquote>
+      </article>
+      <div class="slider__navigation">
+        <button type="button" class="slider__arrow slider__arrow--previous" title="Prev review">Предыдущий отзыв</button>
+        <button type="button" class="slider__arrow slider__arrow--next" title="Next review">Следующий отзыв</button>
+      </div>
+      <a class="reviews__create">Написать</a>
+    </section>
 
-        </section>
+    <section class="contacts">
+      <h2 class="contacts__title">Контакты</h2>
+      <table class="contacts__details">
+        <tr>
+          <td>e-mail:</td>
+          <td>
+            <a href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
+          </td>
+        </tr>
+        <tr>
+          <td>адрес:</td>
+          <td>г. Санкт-Петербург, ул. Большая Конюшенная, д.19/8, офис 101</td>
+        </tr>
+      </table>
+      <article class="contacts__map">
+        <img src="http://placehold.it/150x100" alt="Карта">
+      </article>
+      <button type="button" class="contacts__button">Напишите нам</button>
+    </section>
+  </main>
 
-        <section class="contacts">
-            <h2 class="contacts-title">Контакты</h2>
-            <table class="contacts__details">
-                <tr>
-                    <td>e-mail:</td>
-                    <td><a href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a></td>
-                </tr>
-                <tr>
-                    <td>адрес:</td>
-                    <td>г. Санкт-Петербург, ул. Большая Конюшенная, д.19/8, офис 101</td>
-                </tr>
-            </table>
-            <article class="contacts__map">
-                <img src="http://placehold.it/150x100" alt="Карта">
-            </article>
-            <button type="button" class="contacts__button">Напишите нам</button>
-        </section>
-    </main>
+  <footer class="page-footer">
+    <div class="page-footer__wrapper">
 
-    <footer class="page-footer">
-        <div class="page-footer__wrapper">
+      <ul class="social">
+        <li>
+          <a class="social__link--instagram" href="#"></a>
+        </li>
+        <li>
+          <a class="social__link--fb" href="#"></a>
+        </li>
+        <li>
+          <a class="social__link--twitter" href="#"></a>
+        </li>
+      </ul>
 
-            <ul class="social">
-                <li>
-                    <a class="social__instagram" href="#"></a>
-                </li>
-                <li>
-                    <a class="social__fb" href="#"></a>
-                </li>
-                <li>
-                    <a class="social__twitter" href="#"></a>
-                </li>
-            </ul>
-
-            <div class="page-footer__copyright copyright">
-                <b class="copyright__text">Разработано:</b>
-                <a class="button copyright__link" href="#"><img src="http://placehold.it/150x100" class="copyright__logo" alt="logo"></a>
-            </div>
-        </div>
-    </footer>
+      <div class="page-footer__copyright copyright">
+        <b class="copyright__text">Разработано:</b>
+        <a class="button copyright__link" href="#">
+          <img src="http://placehold.it/150x100" class="copyright__logo" alt="logo">
+        </a>
+      </div>
+    </div>
+  </footer>
 
 </body>
 
