form.html markup version 4

--- a/source/form.html
+++ b/source/form.html
@@ -151,13 +151,13 @@
 
       <ul class="social">
         <li>
-          <a class="social__link--instagram" href="#"></a>
+          <a class="social__link social__link--instagram" href="#"></a>
         </li>
         <li>
-          <a class="social__link--fb" href="#"></a>
+          <a class="social__link social__link--fb" href="#"></a>
         </li>
         <li>
-          <a class="social__link--twitter" href="#"></a>
+          <a class="social__link social__link--twitter" href="#"></a>
         </li>
       </ul>
 
