catalog.html markup version 4

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>HTML Academy: Мишка. Форма заказа</title>
   <link href="css/style.css" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
 </head>
 
 <body>
@@ -53,7 +54,7 @@
     <section class="catalog">
       <article class="catalog-item catalog__item">
         <a class="catalog-item__img" href="#">
-          <img src="http://placehold.it/150x100" alt="Заяц">
+          <img src="img/img/photo-hare-mobile@1x.jpg" alt="Заяц">
         </a>
         <div class="catalog-item__features">
           <div class="catalog-item__title">
@@ -62,13 +63,13 @@
           </div>
           <div class="catalog-item__price">
             <span class="catalog-item__price-rub">1200&nbsp;руб.</span>
-            <a class="catalog-item__price-icon"></a>
+            <a class="catalog-item__price-icon" aria-label="Положить в корзину"></a>
           </div>
         </div>
       </article>
       <article class="catalog-item catalog__item">
         <a class="catalog-item__img" href="#">
-          <img src="http://placehold.it/150x100" alt="Корзинка">
+          <img src="img/img/photo-bowl-mobile@1x.jpg" alt="Корзинка">
         </a>
 
         <div class="catalog-item__features">
@@ -78,13 +79,13 @@
           </div>
           <div class="catalog-item__price">
             <span class="catalog-item__price-rub">690&nbsp;руб.</span>
-            <a class="catalog-item__price-icon"></a>
+            <a class="catalog-item__price-icon" aria-label="Положить в корзину"></a>
           </div>
         </div>
       </article>
       <article class="catalog-item catalog__item">
         <a class="catalog-item__img" href="#">
-          <img src="http://placehold.it/150x100" alt="Корзина для игрушек">
+          <img src="img/img/photo-toys-mobile@1x.jpg" alt="Корзина для игрушек">
         </a>
 
         <div class="catalog-item__features">
@@ -94,7 +95,7 @@
           </div>
           <div class="catalog-item__price">
             <span class="catalog-item__price-rub">1500&nbsp;руб.</span>
-            <a class="catalog-item__price-icon"></a>
+            <a class="catalog-item__price-icon" aria-label="Положить в корзину"></a>
           </div>
         </div>
       </article>
@@ -123,13 +124,13 @@
 
       <ul class="social">
         <li>
-          <a class="social__link--instagram" href="#"></a>
+          <a class="social__link social__link--instagram" href="#" aria-label="Инстаграм"></a>
         </li>
         <li>
-          <a class="social__link--fb" href="#"></a>
+          <a class="social__link social__link--fb" href="#" aria-label="Фэйсбук"></a>
         </li>
         <li>
-          <a class="social__link--twitter" href="#"></a>
+          <a class="social__link social__link--twitter" href="#" aria-label="Твиттер"></a>
         </li>
       </ul>
 
