index.html markup version 6

--- a/source/index.html
+++ b/source/index.html
@@ -51,7 +51,7 @@
     </div>
 
     <div class="category">
-      <a class="category__item category__item--interior" href="#"">Предметы интерьера</a>
+      <a class="category__item category__item--interior" href="#">Предметы интерьера</a>
       <a class="category__item category__item--toys" href="#">Детские игрушки</a>
     </div>
 
@@ -93,12 +93,11 @@
       <div class="features-list">
 
         <ul class="features-list__advantages">
-          <li class="features-list__advantages features-list__advantages--eco">Экологически чистые материалы</li>
-          <li class="features-list__advantages features-list__advantages--style">Скандинавский стиль по&nbsp;российской цене</li>
-          <li class="features-list__advantages features-list__advantages--like">Увеличивает лайки на&nbsp;фотографиях</li>
-          <li class="features-list__advantages features-list__advantages--love">Связано вручную с&nbsp;любовью и&nbsp;умилением</li>
-          <li class="features-list__advantages features-list__advantages--native">Поддержка отечественного производителя</li>
-          <li class="features-list__advantages features-list__advantages--gift">Поставляется в&nbsp;подарочной упаковке</li>
+          <li class="features-list__item features-list__item--eco">Экологически чистые материалы</li>
+          <li class="features-list__item features-list__item--like">Увеличивает лайки на&nbsp;фотографиях</li>
+          <li class="features-list__item features-list__item--love">Связано вручную с&nbsp;любовью и&nbsp;умилением</li>
+          <li class="features-list__item features-list__item--native">Поддержка отечественного производителя</li>
+          <li class="features-list__item features-list__item--gift">Поставляется в&nbsp;подарочной упаковке</li>
         </ul>
       </div>
 
@@ -134,7 +133,7 @@
         <button type="button" class="slider__arrow slider__arrow--previous" title="Prev review" aria-label="Предыдущий отзыв">Предыдущий отзыв</button>
         <button type="button" class="slider__arrow slider__arrow--next" title="Next review" aria-label="Следующий отзыв">Следующий отзыв</button>
       </div>
-      <a class="reviews__create"">Написать</a>
+      <a class="reviews__create">Написать</a>
     </section>
 
     <section class="contacts">
