Исправлена разметка меню в хедере, исправлен порядок объявления шрифтов, начато создание адаптивной сетки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -22,26 +22,33 @@
 
       <button class="main-menu__button-icon" type="button"></button>
 
-      <ul class="main-menu__list">
-        <li>
-          <a class="main-menu__list-item" href="#">Каталог товаров</a>
+      <ul class="main-menu__list category-list">
+        <li class="category-list__item">
+          <a class="category-list__link">Каталог товаров</a>
         </li>
-        <li>
-          <a class="main-menu__list-item" href="#">Вязание на&nbsp;заказ</a>
-        </li>
-        <li>
-          <a class="main-menu__list-item" href="#">Поиск</a>
-        </li>
-        <li>
-          <a class="main-menu__list-item" href="#">Корзина</a>
-        </li>
-        <li>
-          <a class="main-menu__list-item" href="#">Новые поступления</a>
-        </li>
-        <li>
-          <a class="main-menu__list-item" href="#">Распродажа</a>
+        <li class="category-list__item">
+          <a class="category-list__link">Вязание на заказ</a>
         </li>
       </ul>
+
+      <ul class="main-menu__list user-list">
+        <li class="user-list__item">
+          <a class="user-list__link">Поиск</a>
+        </li>
+        <li class="user-list__item">
+          <a class="user-list__link">Корзина: пока пуста</a>
+        </li>
+      </ul>
+
+      <ul class="main-menu__list desktop-list">
+        <li class="desktop-list__item">
+          <a class="desktop-list__link">Новые поступления</a>
+        </li>
+        <li class="desktop-list__item">
+          <a class="desktop-list__link">Распродажа</a>
+        </li>
+      </ul>
+
     </nav>
 
   </header>
