--- a/source/form.html
+++ b/source/form.html
@@ -22,26 +22,33 @@
 
       <button class="main-menu__button-icon" type="button"></button>
 
-      <ul class="main-menu__list">
-        <li>
-          <a class="main-menu__list-item" href="#">Каталог товаров</a>
+      <ul class="main-menu__list category-list">
+        <li class="category-list__item">
+          <a class="category-list__link">Каталог товаров</a>
         </li>
-        <li>
-          <a class="main-menu__list-item" href="#">Вязание на&nbsp;заказ</a>
-        </li>
-        <li>
-          <a class="main-menu__list-item" href="#">Поиск</a>
-        </li>
-        <li>
-          <a class="main-menu__list-item" href="#">Корзина</a>
-        </li>
-        <li>
-          <a class="main-menu__list-item" href="#">Новые поступления</a>
-        </li>
-        <li>
-          <a class="main-menu__list-item" href="#">Распродажа</a>
+        <li class="category-list__item">
+          <a class="category-list__link">Вязание на заказ</a>
         </li>
       </ul>
+
+      <ul class="main-menu__list user-list">
+        <li class="user-list__item">
+          <a class="user-list__link">Поиск</a>
+        </li>
+        <li class="user-list__item">
+          <a class="user-list__link">Корзина: пока пуста</a>
+        </li>
+      </ul>
+
+      <ul class="main-menu__list desktop-list">
+        <li class="desktop-list__item">
+          <a class="desktop-list__link">Новые поступления</a>
+        </li>
+        <li class="desktop-list__item">
+          <a class="desktop-list__link">Распродажа</a>
+        </li>
+      </ul>
+
     </nav>
 
   </header>
@@ -112,6 +119,7 @@
         </div>
       </fieldset>
 
+      <div class="form__contact-wrapper">
       <fieldset class="form__tel">
         <legend class="form__legend">
           <label>Тел</label>
@@ -129,6 +137,7 @@
           <input class="form__email form__input-email" name="email" id="email" type="email" placeholder="Ваш Email*" required>
         </div>
       </fieldset>
+      </div>
 
       <fieldset class="form__additional">
         <legend class="form__legend">
