--- a/source/index.html
+++ b/source/index.html
@@ -14,36 +14,43 @@
 
     <div class="logo">
       <a class="logo__image">
-        <img src="img/img/logo-mobile.svg" alt="Mishka">
+        <img src="/img/logo-mobile.svg" alt="Mishka">
       </a>
     </div>
 
-    <nav class="main-menu">
+<nav class="main-menu">
 
-      <button class="main-menu__button-icon" type="button"></button>
+  <button class="main-menu__button-icon" type="button"></button>
 
-      <ul class="main-menu__list">
-        <li>
-          <a class="main-menu__list-item" href="#">Каталог товаров</a>
-        </li>
-        <li>
-          <a class="main-menu__list-item" href="#">Вязание на&nbsp;заказ</a>
-        </li>
-        <li>
-          <a class="main-menu__list-item" href="#">Поиск</a>
-        </li>
-        <li>
-          <a class="main-menu__list-item" href="#">Корзина</a>
-        </li>
-        <li>
-          <a class="main-menu__list-item" href="#">Новые поступления</a>
-        </li>
-        <li>
-          <a class="main-menu__list-item" href="#">Распродажа</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+  <ul class="main-menu__list category-list">
+    <li class="category-list__item">
+      <a class="category-list__link">Каталог товаров</a>
+    </li>
+    <li class="category-list__item">
+      <a class="category-list__link">Вязание на заказ</a>
+    </li>
+  </ul>
+
+  <ul class="main-menu__list user-list">
+    <li class="user-list__item">
+      <a class="user-list__link">Поиск</a>
+    </li>
+    <li class="user-list__item">
+      <a class="user-list__link">Корзина: пока пуста</a>
+    </li>
+  </ul>
+
+  <ul class="main-menu__list desktop-list">
+    <li class="desktop-list__item">
+      <a class="desktop-list__link">Новые поступления</a>
+    </li>
+    <li class="desktop-list__item">
+      <a class="desktop-list__link">Распродажа</a>
+    </li>
+  </ul>
+
+</nav>
+</header>
 
   <main class="page-main">
     <div class="page-main__header">
@@ -79,7 +86,7 @@
           </tr>
         </table>
 
-        <img class="popular-item__image" src="img/img/triple-set-mobile@1x.jpg" alt="Вязаная корзинка">
+        <img class="popular-item__image" src="/source/img/hero-mobile@1x.jpg" alt="Вязаная корзинка">
       </article>
       <footer class="popular-item__footer">
         <span class="popular-item__price">Цена: 990&nbsp;руб.</span>
@@ -91,7 +98,6 @@
     <section class="features">
       <h2 class="features__title">Коротко о&nbsp;нас:</h2>
       <div class="features-list">
-
         <ul class="features-list__advantages">
           <li class="features-list__item features-list__item--eco">Экологически чистые материалы</li>
           <li class="features-list__item features-list__item--like">Увеличивает лайки на&nbsp;фотографиях</li>
