Исправлены стили при перестройке макетов, удалена лишняя переменная

--- a/source/index.html
+++ b/source/index.html
@@ -18,39 +18,39 @@
       </a>
     </div>
 
-<nav class="main-menu">
+    <nav class="main-menu">
 
-  <button class="main-menu__button-icon" type="button"></button>
+      <button class="main-menu__button-icon" type="button"></button>
 
-  <ul class="main-menu__list category-list">
-    <li class="category-list__item">
-      <a class="category-list__link">Каталог товаров</a>
-    </li>
-    <li class="category-list__item">
-      <a class="category-list__link">Вязание на заказ</a>
-    </li>
-  </ul>
+      <ul class="main-menu__list category-list">
+        <li class="category-list__item">
+          <a class="category-list__link">Каталог товаров</a>
+        </li>
+        <li class="category-list__item">
+          <a class="category-list__link">Вязание на заказ</a>
+        </li>
+      </ul>
 
-  <ul class="main-menu__list user-list">
-    <li class="user-list__item">
-      <a class="user-list__link">Поиск</a>
-    </li>
-    <li class="user-list__item">
-      <a class="user-list__link">Корзина: пока пуста</a>
-    </li>
-  </ul>
+      <ul class="main-menu__list user-list">
+        <li class="user-list__item">
+          <a class="user-list__link">Поиск</a>
+        </li>
+        <li class="user-list__item">
+          <a class="user-list__link">Корзина: пока пуста</a>
+        </li>
+      </ul>
 
-  <ul class="main-menu__list desktop-list">
-    <li class="desktop-list__item">
-      <a class="desktop-list__link">Новые поступления</a>
-    </li>
-    <li class="desktop-list__item">
-      <a class="desktop-list__link">Распродажа</a>
-    </li>
-  </ul>
+      <ul class="main-menu__list desktop-list">
+        <li class="desktop-list__item">
+          <a class="desktop-list__link">Новые поступления</a>
+        </li>
+        <li class="desktop-list__item">
+          <a class="desktop-list__link">Распродажа</a>
+        </li>
+      </ul>
 
-</nav>
-</header>
+    </nav>
+  </header>
 
   <main class="page-main">
     <div class="page-main__header">
@@ -67,27 +67,34 @@
         <h2 class="popular-item__type">Вязаные корзинки</h2>
         <span class="popular-item__title">Товар недели</span>
       </header>
-      <article class="popular-item__description">
-        <p class="popular-item__text">
-          Экологически чистая пряжа, ручная работа. Доступны в&nbsp;шести расцветках, и&nbsp;трех размерах
-        </p>
-        <table class="popular-item__table">
-          <tr>
-            <td class="popular-item__table-key">Цвет:</td>
-            <td class="popular-item__table-value">&laquo;Тиффани&raquo;/серый</td>
-          </tr>
-          <tr>
-            <td class="popular-item__table-key">Диаметр:</td>
-            <td class="popular-item__table-value">25&nbsp;см</td>
-          </tr>
-          <tr>
-            <td class="popular-item__table-key">Высота:</td>
-            <td class="popular-item__table-value">15&nbsp;см</td>
-          </tr>
-        </table>
-
-        <img class="popular-item__image" src="/source/img/hero-mobile@1x.jpg" alt="Вязаная корзинка">
-      </article>
+      <div class="popular-item__wrapper">
+        <article class="popular-item__description">
+          <div class="popular-item__description-inner">
+            <p class="popular-item__text">
+              Экологически чистая пряжа, ручная работа. Доступны в&nbsp;шести расцветках, и&nbsp;трех размерах
+            </p>
+            <table class="popular-item__table">
+              <tbody>
+                <tr>
+                  <td class="popular-item__table-key">Цвет:</td>
+                  <td class="popular-item__table-value">&laquo;Тиффани&raquo;/серый</td>
+                </tr>
+                <tr>
+                  <td class="popular-item__table-key">Диаметр:</td>
+                  <td class="popular-item__table-value">25&nbsp;см</td>
+                </tr>
+                <tr>
+                  <td class="popular-item__table-key">Высота:</td>
+                  <td class="popular-item__table-value">15&nbsp;см</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="popular-item__image">
+            <img src="img/triple-set-mobile@1x.jpg" alt="Вязаная корзинка">
+          </div>
+        </article>
+      </div>
       <footer class="popular-item__footer">
         <span class="popular-item__price">Цена: 990&nbsp;руб.</span>
         <a href="#" class="popular-item__button">Заказать</a>
@@ -100,6 +107,7 @@
       <div class="features-list">
         <ul class="features-list__advantages">
           <li class="features-list__item features-list__item--eco">Экологически чистые материалы</li>
+          <li class="features-list__item features-list__item--style">Скандинавский стиль по&nbsp;российской цене</li>
           <li class="features-list__item features-list__item--like">Увеличивает лайки на&nbsp;фотографиях</li>
           <li class="features-list__item features-list__item--love">Связано вручную с&nbsp;любовью и&nbsp;умилением</li>
           <li class="features-list__item features-list__item--native">Поддержка отечественного производителя</li>
@@ -112,7 +120,7 @@
     <section class="reviews  slider">
       <h2 class="reviews__title">Отзывы</h2>
       <article class="reviews__items-wrapper  slider__items-wrapper">
-        <blockquote class="reviews__item  slider__item  review">
+        <blockquote class="reviews__item  slider__item  review slider__item--prev">
           <p class="review__text">
             Я&nbsp;молодая мама, но&nbsp;все равно фотографии не&nbsp;набирали и&nbsp;близко такого количества лайков, как у&nbsp;популярных
             инстамамочек. В&nbsp;отчаянии, я&nbsp;накупила аксессуаров и&nbsp;игрушек в&nbsp;Мишке, и&nbsp;мои фотографии
@@ -143,23 +151,33 @@
     </section>
 
     <section class="contacts">
-      <h2 class="contacts__title">Контакты</h2>
-      <table class="contacts__details">
-        <tr>
-          <td class="contacts__details-key">e-mail:</td>
-          <td class="contacts__details-value">
-            <a href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
-          </td>
-        </tr>
-        <tr>
-          <td class="contacts__details-key">адрес:</td>
-          <td class="contacts__details-value">г. Санкт-Петербург, ул. Большая Конюшенная, д.19/8, офис 101</td>
-        </tr>
-      </table>
-      <article class="contacts__map">
-        <img src="img/img/map-mobile@1x.jpg" alt="Карта">
-      </article>
-      <button type="button" class="contacts__button">Напишите нам</button>
+      <div class="contacts__wrapper">
+        <div class="contacts__info">
+          <h2 class="contacts__title">Контакты</h2>
+          <div class="contacts__all">
+            <table class="contacts__details">
+              <tbody class="contacts__details-wrapper">
+                <tr>
+                  <td class="contacts__details-key">e-mail:</td>
+                  <td class="contacts__details-value">
+                    <a href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="contacts__details-key">адрес:</td>
+                  <td class="contacts__details-value">г. Санкт-Петербург, ул. Большая Конюшенная, д.19/8, офис 101</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+        <div class="contacts__map">
+          <img src="/img/map-mobile@1x.jpg" alt="Карта">
+        </div>
+        <div class="contacts__button">
+          <button type="button" class="contacts__button">Напишите нам</button>
+        </div>
+      </div>
     </section>
   </main>
 
@@ -179,9 +197,12 @@
       </ul>
 
       <div class="page-footer__copyright copyright">
+        <a class="copyright__logo" href="#">
+          <img src="/img/logo-mobile.svg" alt="Mishka">
+        </a>
         <b class="copyright__text">Разработано:</b>
         <a class="button copyright__link" href="#">
-          <img src="img/img/logo-htmlacademy.svg" class="copyright__logo" alt="logo">
+          <img src="/img/logo-htmlacademy.svg" class="copyright__logo" alt="logo">
         </a>
       </div>
     </div>
