--- a/source/catalog.html
+++ b/source/catalog.html
@@ -61,7 +61,7 @@
     <section class="catalog">
       <article class="catalog-item catalog__item">
         <a class="catalog-item__img" href="#">
-          <img src="img/img/photo-hare-mobile@1x.jpg" alt="Заяц">
+          <img src="img/photo-hare-mobile@1x.jpg" alt="Заяц">
         </a>
         <div class="catalog-item__features">
           <div class="catalog-item__title">
@@ -76,7 +76,7 @@
       </article>
       <article class="catalog-item catalog__item">
         <a class="catalog-item__img" href="#">
-          <img src="img/img/photo-bowl-mobile@1x.jpg" alt="Корзинка">
+          <img src="img/photo-bowl-mobile@1x.jpg" alt="Корзинка">
         </a>
 
         <div class="catalog-item__features">
@@ -92,7 +92,7 @@
       </article>
       <article class="catalog-item catalog__item">
         <a class="catalog-item__img" href="#">
-          <img src="img/img/photo-toys-mobile@1x.jpg" alt="Корзина для игрушек">
+          <img src="img/photo-toys-mobile@1x.jpg" alt="Корзина для игрушек">
         </a>
 
         <div class="catalog-item__features">
@@ -142,6 +142,9 @@
       </ul>
 
       <div class="page-footer__copyright copyright">
+        <a class="copyright__logo" href="#">
+          <img src="/img/logo-mobile.svg" alt="Mishka">
+        </a>
         <b class="copyright__text">Разработано:</b>
         <a class="button copyright__link" href="#">
           <img src="http://placehold.it/150x100" class="copyright__logo" alt="logo">
