--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,58 +10,62 @@
 
 <body>
 
-  <header class="page-header">
+    <header class="page-header">
+        <div class="page-header__container">
 
-    <div class="logo">
-      <a href="#" class="logo_image">
-        <img src="http://placehold.it/150x100" alt="Mishka">
-      </a>
+      <div class="logo">
+        <a class="logo__image">
+          <img src="/img/logo-mobile.svg" alt="Mishka">
+        </a>
+      </div>
+
+      <nav class="main-menu">
+
+        <button class="main-menu__button-icon" type="button" aria-label="Открыть главное меню"></button>
+
+
+        <ul class="main-menu__list category-list">
+          <li class="category-list__item">
+            <a class="category-list__link" href="/catalog.html">Каталог товаров</a>
+          </li>
+          <li class="category-list__item">
+            <a class="category-list__link" href="/form.html">Вязание на заказ</a>
+          </li>
+        </ul>
+
+        <ul class="main-menu__list user-list">
+          <li class="user-list__item">
+            <a class="user-list__link">Поиск</a>
+          </li>
+          <li class="user-list__item">
+            <a class="user-list__link">Корзина: пока пуста</a>
+          </li>
+        </ul>
+
+        <ul class="main-menu__list desktop-list">
+          <li class="desktop-list__item">
+            <a class="desktop-list__link">Новые поступления</a>
+          </li>
+          <li class="desktop-list__item">
+            <a class="desktop-list__link">Распродажа</a>
+          </li>
+        </ul>
+
+      </nav>
     </div>
+    </header>
 
-    <nav class="main-menu">
-
-      <button class="main-menu__button-icon" type="button"></button>
-
-      <ul class="main-menu__list category-list">
-        <li class="category-list__item">
-          <a class="category-list__link">Каталог товаров</a>
-        </li>
-        <li class="category-list__item">
-          <a class="category-list__link">Вязание на заказ</a>
-        </li>
-      </ul>
-
-      <ul class="main-menu__list user-list">
-        <li class="user-list__item">
-          <a class="user-list__link">Поиск</a>
-        </li>
-        <li class="user-list__item">
-          <a class="user-list__link">Корзина: пока пуста</a>
-        </li>
-      </ul>
-
-      <ul class="main-menu__list desktop-list">
-        <li class="desktop-list__item">
-          <a class="desktop-list__link">Новые поступления</a>
-        </li>
-        <li class="desktop-list__item">
-          <a class="desktop-list__link">Распродажа</a>
-        </li>
-      </ul>
-
-    </nav>
-
-  </header>
-
-  <main class="page-main">
-    <div class="page-main__header">
+    <main class="page-main">
+        <div class="page-main__header">
       <h1 class="page-main__header-title">Каталог товаров</h1>
     </div>
 
+
     <section class="catalog">
+      <div class="catalog__container">
       <article class="catalog-item catalog__item">
-        <a class="catalog-item__img" href="#">
-          <img src="img/photo-hare-mobile@1x.jpg" alt="Заяц">
+        <a class="catalog-item__link" href="#">
+          <img class="catalog-item__img" src="img/photo-hare-mobile@1x.jpg" alt="Заяц">
         </a>
         <div class="catalog-item__features">
           <div class="catalog-item__title">
@@ -75,8 +79,8 @@
         </div>
       </article>
       <article class="catalog-item catalog__item">
-        <a class="catalog-item__img" href="#">
-          <img src="img/photo-bowl-mobile@1x.jpg" alt="Корзинка">
+        <a class="catalog-item__link" href="#">
+          <img class="catalog-item__img" src="/img/photo-bowl-mobile@1x.jpg" alt="Корзинка">
         </a>
 
         <div class="catalog-item__features">
@@ -91,8 +95,8 @@
         </div>
       </article>
       <article class="catalog-item catalog__item">
-        <a class="catalog-item__img" href="#">
-          <img src="img/photo-toys-mobile@1x.jpg" alt="Корзина для игрушек">
+        <a class="catalog-item__link" href="#">
+          <img class="catalog-item__img" src="img/photo-toys-mobile@1x.jpg" alt="Корзина для игрушек">
         </a>
 
         <div class="catalog-item__features">
@@ -106,6 +110,7 @@
           </div>
         </div>
       </article>
+      </div>
     </section>
 
     <section class="promo">
@@ -113,45 +118,49 @@
       <h2 class="promo__title">Процесс производства</h2>
 
       <article class="promo__video">
-        <video controls preload="metadata" width="100" height="150"></video>
+        <button type="button" class="promo__video-button" name="Play">
+          <img src="/img/icon-play.svg" class="promo__video-play" alt="Play">
+        </button>
+
       </article>
       <div class="promo__description">
         <p class="promo__text">
           По&nbsp;просьбам наших любимых фолловеров мы сняли для Вас подробное видео о&nbsp;том, как появляются наши товары.
         </p>
+        <button class="order-button button" type="button">Сделать заказ</button>
       </div>
-    </section>>
+    </section>
 
-    <button class="order-button" type="button">Сделать заказ</button>
+
 
   </main>
 
   <footer class="page-footer">
-    <div class="page-footer__wrapper">
+      <div class="page-footer__wrapper">
 
-      <ul class="social">
-        <li>
-          <a class="social__link social__link--instagram" href="#" aria-label="Инстаграм"></a>
-        </li>
-        <li>
-          <a class="social__link social__link--fb" href="#" aria-label="Фэйсбук"></a>
-        </li>
-        <li>
-          <a class="social__link social__link--twitter" href="#" aria-label="Твиттер"></a>
-        </li>
-      </ul>
+        <ul class="social">
+          <li>
+            <a class="social__link social__link--instagram" href="#" aria-label="Инстаграм"></a>
+          </li>
+          <li>
+            <a class="social__link social__link--fb" href="#" aria-label="Фэйсбук"></a>
+          </li>
+          <li>
+            <a class="social__link social__link--twitter" href="#" aria-label="Твиттер"></a>
+          </li>
+        </ul>
 
-      <div class="page-footer__copyright copyright">
-        <a class="copyright__logo" href="#">
-          <img src="/img/logo-mobile.svg" alt="Mishka">
-        </a>
-        <b class="copyright__text">Разработано:</b>
-        <a class="button copyright__link" href="#">
-          <img src="http://placehold.it/150x100" class="copyright__logo" alt="logo">
-        </a>
+        <div class="page-footer__copyright copyright">
+          <a class="copyright__logo" href="#">
+            <img src="/img/logo-mobile.svg" alt="Mishka">
+          </a>
+          <b class="copyright__text">Разработано</b>
+          <a class="copyright__link" href="#">
+            <img src="/img/logo-htmlacademy.svg" class="copyright__link-logo" alt="logo">
+          </a>
+        </div>
       </div>
-    </div>
-  </footer>
+    </footer>
 
 </body>
 
