--- a/source/form.html
+++ b/source/form.html
@@ -10,59 +10,65 @@
 
 <body>
 
-  <header class="page-header">
+    <header class="page-header">
+        <div class="page-header__container">
 
-    <div class="logo">
-      <a href="#" class="logo__image">
-        <img src="http://placehold.it/150x100" alt="Mishka">
-      </a>
+      <div class="logo">
+        <a class="logo__image">
+          <img src="/img/logo-mobile.svg" alt="Mishka">
+        </a>
+      </div>
+
+      <nav class="main-menu">
+
+        <button class="main-menu__button-icon" type="button" aria-label="Открыть главное меню"></button>
+
+
+        <ul class="main-menu__list category-list">
+          <li class="category-list__item">
+            <a class="category-list__link" href="/catalog.html">Каталог товаров</a>
+          </li>
+          <li class="category-list__item">
+            <a class="category-list__link" href="/form.html">Вязание на заказ</a>
+          </li>
+        </ul>
+
+        <ul class="main-menu__list user-list">
+          <li class="user-list__item">
+            <a class="user-list__link">Поиск</a>
+          </li>
+          <li class="user-list__item">
+            <a class="user-list__link">Корзина: пока пуста</a>
+          </li>
+        </ul>
+
+        <ul class="main-menu__list desktop-list">
+          <li class="desktop-list__item">
+            <a class="desktop-list__link">Новые поступления</a>
+          </li>
+          <li class="desktop-list__item">
+            <a class="desktop-list__link">Распродажа</a>
+          </li>
+        </ul>
+
+      </nav>
     </div>
+    </header>
 
-    <nav class="main-menu">
-
-      <button class="main-menu__button-icon" type="button"></button>
-
-      <ul class="main-menu__list category-list">
-        <li class="category-list__item">
-          <a class="category-list__link">Каталог товаров</a>
-        </li>
-        <li class="category-list__item">
-          <a class="category-list__link">Вязание на заказ</a>
-        </li>
-      </ul>
-
-      <ul class="main-menu__list user-list">
-        <li class="user-list__item">
-          <a class="user-list__link">Поиск</a>
-        </li>
-        <li class="user-list__item">
-          <a class="user-list__link">Корзина: пока пуста</a>
-        </li>
-      </ul>
-
-      <ul class="main-menu__list desktop-list">
-        <li class="desktop-list__item">
-          <a class="desktop-list__link">Новые поступления</a>
-        </li>
-        <li class="desktop-list__item">
-          <a class="desktop-list__link">Распродажа</a>
-        </li>
-      </ul>
-
-    </nav>
-
-  </header>
-
-  <main class="page-main">
-    <div class="page-main__header">
+    <main class="page-main">
+        <div class="page-main__header">
       <h1 class="page-main__header-title">Вязание на&nbsp;заказ</h1>
     </div>
 
-    <form class="form" action="#" method="POST">
-      <p class="form__intro">
+
+      <div class="form__intro">
+      <p class="form__intro-text">
         Мы&nbsp;будем рады воплотить в&nbsp;жизнь Ваши пожелания! Заполните простую форму заказа, и&nbsp;мы&nbsp;свяжемся с&nbsp;вами,
         чтобы уточнить детали.
       </p>
+      </div>
+      <form class="form" action="#" method="POST">
+        <div class="form__wrapper form__wrapper--type">
       <fieldset class="form__type">
         <legend class="form__legend form__type-title">Тип</legend>
         <div class="form__radio">
@@ -74,7 +80,9 @@
           <label class="form__radio-label" for="type-2">Детская игрушка</label>
         </div>
       </fieldset>
+      </div>
 
+      <div class="form__wrapper form__wrapper--color">
       <fieldset class="form__color color">
         <legend class="form__legend form__color-title">Цвет</legend>
         <div class="color__checkbox">
@@ -102,7 +110,9 @@
           <label class="color__label color__label-checkbox" for="color-6">Оранжевый</label>
         </div>
       </fieldset>
+    </div>
 
+    <div class="form__wrapper form__wrapper--name">
       <fieldset class="form__personal">
         <legend class="form__legend personal__title">ФИО</legend>
         <div class="form__personal form__personal-wrapper">
@@ -118,8 +128,9 @@
           <input class="form__personal-name" name="middle-name" id="middle-name" type="text" placeholder="Отчество, если желаете">
         </div>
       </fieldset>
+      </div>
 
-      <div class="form__contact-wrapper">
+      <div class="form__wrapper form__wrapper--contacts">
         <fieldset class="form__tel">
           <legend class="form__legend">
             <label>Тел</label>
@@ -139,6 +150,7 @@
         </fieldset>
       </div>
 
+      <div class="form__wrapper form__wrapper--wishes">
       <fieldset class="form__additional">
         <legend class="form__legend">
           <label>Доп</label>
@@ -147,41 +159,43 @@
           <textarea class="form__additional-textarea" name="additional" placeholder="Опишите все Ваши пожелания к заказу"></textarea>
         </div>
       </fieldset>
+      </div>
 
-      <span class="form__text-note">*Поля обязательны для заполнения</span>
+      <div class="form__wrapper form__wrapper--note">
+      <p class="form__text-note">*Поля обязательны для заполнения</p>
       <div class="form__submit-button">
-        <button class="form__submit-button" type="submit" name="submit-button">Отправить заказ</button>
+        <button class="form__submit-button button" type="submit" name="submit-button">Отправить заказ</button>
+      </div>
       </div>
 
     </form>
   </main>
 
   <footer class="page-footer">
-    <div class="page-footer__wrapper">
+      <div class="page-footer__wrapper">
 
-      <ul class="social">
-        <li>
-          <a class="social__link social__link--instagram" href="#" aria-label="Инстаграм"></a>
-        </li>
-        <li>
-          <a class="social__link social__link--fb" href="#" aria-label="Фэйсбук"></a>
-        </li>
-        <li>
-          <a class="social__link social__link--twitter" href="#" aria-label="Твиттер"></a>
-        </li>
-      </ul>
+        <ul class="social">
+          <li>
+            <a class="social__link social__link--instagram" href="#" aria-label="Инстаграм"></a>
+          </li>
+          <li>
+            <a class="social__link social__link--fb" href="#" aria-label="Фэйсбук"></a>
+          </li>
+          <li>
+            <a class="social__link social__link--twitter" href="#" aria-label="Твиттер"></a>
+          </li>
+        </ul>
 
-      <div class="page-footer__copyright copyright">
-        <a class="copyright__logo" href="#">
-          <img src="/img/logo-mobile.svg" alt="Mishka">
-        </a>
-        <b class="copyright__text">Разработано:</b>
-        <a class="button copyright__link" href="#">
-          <img src="http://placehold.it/150x100" class="copyright__logo" alt="logo">
-        </a>
+        <div class="page-footer__copyright copyright">
+          <a class="copyright__logo" href="#">
+            <img src="/img/logo-mobile.svg" alt="Mishka">
+          </a>
+          <b class="copyright__text">Разработано</b>
+          <a class="copyright__link" href="#">
+            <img src="/img/logo-htmlacademy.svg" class="copyright__link-logo" alt="logo">
+          </a>
+        </div>
       </div>
-    </div>
-  </footer>
-</body>
+    </footer>
 
 </html>
