Добавлены контейнеры для содержимого, исправлены стили, добавлен скрипт для выпадающего меню

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -19,7 +19,7 @@
         </a>
       </div>
 
-      <nav class="main-menu">
+      <nav class="main-menu main-menu--closed main-menu--nojs">
 
         <button class="main-menu__button-icon" type="button" aria-label="Открыть главное меню"></button>
 
@@ -161,6 +161,8 @@
         </div>
       </div>
     </footer>
+
+    <script src="/js/menu.js"></script>
 
 </body>
 
