--- a/source/index.html
+++ b/source/index.html
@@ -20,11 +20,12 @@
       </a>
     </div>
 
-    <nav class="main-menu">
+    <nav class="main-menu main-menu--closed main-menu--nojs">
 
       <button class="button main-menu__button-icon" type="button" aria-label="Открыть главное меню"></button>
 
 
+      <div class="main-menu__wrapper">
       <ul class="main-menu__list category-list">
         <li class="category-list__item">
           <a class="category-list__link" href="/catalog.html">Каталог товаров</a>
@@ -51,6 +52,7 @@
           <a class="desktop-list__link">Распродажа</a>
         </li>
       </ul>
+      </div>
 
     </nav>
   </div>
@@ -60,7 +62,7 @@
   <main class="page-main">
     <div class="page-main-container">
     <div class="page-main__header page-main__header--index">
-      <h1 class="page-main__header-title page-main__header-title--main">Милые штуки<br> ручной<br> работы для дома</h1>
+      <h1 class="page-main__header-title page-main__header-title--main">Милые штуки ручной работы для дома</h1>
     </div>
     </div>
 
@@ -123,7 +125,6 @@
     </section>
 
     <section class="features">
-      <div class="features__container">
       <h2 class="features__title">Коротко о&nbsp;нас:</h2>
       <div class="features-list">
         <ul class="features-list__advantages">
@@ -146,7 +147,6 @@
             <p class="features-list__text features-list__text--gift">Поставляется в&nbsp;подарочной упаковке</p>
           </li>
         </ul>
-      </div>
       </div>
 
     </section>
@@ -247,6 +247,8 @@
       </div>
     </div>
   </footer>
+
+  <script src="/js/menu.js"></script>
 
 </body>
 
